WebKit.ApplicationManifestBasic API test is failing when enabling PSON https://bugs.webkit.org/show_bug.cgi?id=191602

Reviewed by Alex Christensen.

Source/WebKit:

Add support for process swapping for a [WKWebView loadHTML:] load by storing
the necessary data on the API::Navigation and doing a loadData() instead of
a loadRequest() after process swapping when this data is present on the
navigation.

* UIProcess/API/APINavigation.cpp:
(API::Navigation::Navigation):
* UIProcess/API/APINavigation.h:
(API::Navigation::create):
(API::Navigation::substituteData const):
* UIProcess/WebNavigationState.cpp:
(WebKit::WebNavigationState::createLoadDataNavigation):
* UIProcess/WebNavigationState.h:
* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::loadData):
(WebKit::WebPageProxy::continueNavigationInNewProcess):

Tools:

Add API test coverage.

* TestWebKitAPI/Tests/WebKitCocoa/ProcessSwapOnNavigation.mm:

Canonical link: https://commits.webkit.org/206383@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@238179 268f45cc-cd09-0410-ab3c-d52691b4dbfc