Source/WebKit/UIProcess/WebNavigationState.h
@@ -30,6 +30,7 @@
 
 namespace API {
 class Navigation;
+struct SubstituteData;
 }
 
 namespace WebCore {
@@ -51,7 +52,7 @@ public:
     Ref<API::Navigation> createBackForwardNavigation(WebBackForwardListItem& targetItem, WebBackForwardListItem* currentItem, WebCore::FrameLoadType);
     Ref<API::Navigation> createLoadRequestNavigation(WebCore::ResourceRequest&&, WebBackForwardListItem* currentItem);
     Ref<API::Navigation> createReloadNavigation();
-    Ref<API::Navigation> createLoadDataNavigation();
+    Ref<API::Navigation> createLoadDataNavigation(std::unique_ptr<API::SubstituteData>&&);
 
     API::Navigation* navigation(uint64_t navigationID);
     RefPtr<API::Navigation> takeNavigation(uint64_t navigationID);
